import React from 'react';
import { shallow } from 'enzyme';
import SwiperItem from '.';

jest.mock('react', () => ({
  ...jest.requireActual('react'),
  useLayoutEffect: jest.requireActual('react').useEffect,
}));

describe('<SwiperItem />', () => {
  it('should not render without children', () => {
    const wrapper = shallow((
      <SwiperItem>
        <div />
      </SwiperItem>
    ));

    expect(wrapper).toMatchSnapshot();
    expect(wrapper.html()).toMatch(
      /^<div class="swiper-slide css-[^"]+" data-test-id="Slider"><div><\/div><\/div>$/
    );
  });

  it('should add custom className', () => {
    const wrapper = shallow((
      <SwiperItem className="test">
        <div />
      </SwiperItem>
    ));

    expect(wrapper).toMatchSnapshot();
    expect(wrapper.html()).toMatch(
      /^<div class="swiper-slide css-[^"]+ test" data-test-id="Slider"><div><\/div><\/div>$/
    );
  });
});
