// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SwiperItem /> should add custom className 1`] = `
<SwiperSlide
  className="css-1jp3pni-item test"
  data-test-id="Slider"
>
  <div />
</SwiperSlide>
`;

exports[`<SwiperItem /> should not render without children 1`] = `
<SwiperSlide
  className="css-1jp3pni-item"
  data-test-id="Slider"
>
  <div />
</SwiperSlide>
`;
